k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: spyzier
  labels:
    name: spyzier
    app.kubernetes.io/name: spyzier
    app.kubernetes.io/part-of: spyzier-fleet-monitoring
